push footer to bottom

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description"
-        content="World Langauges English French Spanish Learning">
+    <meta name="description" content="World Langauges English French Spanish Learning">
     <meta name="keywords" content="World Languages English French Spanish non-native speakers">
     <!-- Title -->
     <title>World Language School</title>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    
+
     <!-- Header -->
     <header>
         <a href="index.html">
@@ -36,42 +36,43 @@
 
     <!--main-->
     <main>
-      <section id="flags">
-        MAIN CONTENT
-      </section>
+        <section id="flags">
+            MAIN CONTENT
+        </section>
     </main>
-    
+
 
     <!--footer-->
 
     <!-- Footer -->
-<footer>
-    <ul id="social-networks">
-        <li>
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Facebook page (opens in a new tab)">
-                <i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li>
-            <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens in a new tab)">
-                <i class="fa-brands fa-twitter-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                aria-label="Visit our YouTube page (opens in a new tab)">
-                <i class="fa-brands fa-youtube-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)">
-                <i class="fa-brands fa-instagram"></i></a>
-        </li>
-    </ul>
-</footer>
+    <footer>
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/5203ea7fa5.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
