--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,14 @@
         </ul>
     </nav>
 </header>
+
+ <!--main-->
+ <main>
+        
+    MAIN CONTENT
+
+</main>
+
 </body>
 
 <!-- Footer -->
