--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <body>
 
     <!-- Header -->
-    <header>
-        <a href="index.html">
-            <h1 id="logo">World Langauge School</h1>
-        </a>
+
+<!-- Header -->
+<header> 
+    <a href="index.html">
+        <h1 id="logo">World Languages School</h1>
+    </a>
+
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
             <i class="fa-solid fa-bars"></i>
