--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
     <!--main-->
     <main>
         
-            MAIN CONTENT
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Learn a world language with us</h2>
+                <h3>English, French or Spanish</h3>
+            </div>
+        </section>
         
     </main>
 
