--- a/page2.html
+++ b/page2.html
@@ -34,11 +34,50 @@
 </header>
 
  <!--main-->
- <main>
-        
-    MAIN CONTENT
+ <section id="contact">
+    <h2 class="text-center">Contact</h2>
+	<div class="contact-boxes-container flex horizontal-center gap-20">
+	    <div class="contact-box">
+		<h3 class="text-center">Open times</h3>
 
-</main>
+		<table class="text-center">
+    		<tr>
+    			<th></th>
+    			<th>Open</th>
+    			<th>Close</th>	
+    		</tr>
+    		<tr>
+    			<td>Mon - Fri</td>
+    			<td>09:00</td>
+    			<td>21:00</td>
+    		</tr>
+    		<tr>
+    			<td>Weekend</td>
+    			<td>10:00</td>
+    			<td>22:00</td>
+    		</tr>	
+		</table>
+	</div>
+	<div class="text-right contact-box last">
+		<h3>Get in touch</h3>
+
+		<div>
+		<span class="bold">Phone: </span>
+		<span>012 345 678 910</span>
+		</div>
+		<div>
+		<span class="bold">Email: </span>
+		<span>email@coderscoffeehouse.com</span>
+		</div>
+	</div>
+	<div class="text-center contact-box vertical-bottom">
+		<h3>Address</h3>
+		<p>Coders Coffeehouse,<br>42 Coffeebean street,<br>Dublin</p>
+	</div>
+	</div>
+	
+  </section>
+
 
 </body>
 
