--- a/page2.html
+++ b/page2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description"
-        content="World Langauges English French Spanish Learning">
+    <meta name="description" content="World Langauges English French Spanish Learning">
     <meta name="keywords" content="World Languages English French Spanish non-native speakers">
     <!-- Title -->
     <title>World Language School</title>
@@ -15,69 +15,65 @@
 </head>
 
 <body>
-<!-- Header -->
-<header>
-    <a href="index.html">
-        <h1 id="logo">World Language School</h1>
-    </a>
-    <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">
-        <i class="fa-solid fa-bars"></i>
-    </label>
-    <nav>
-        <ul id="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="page2.html" class="active">Page 2</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-        </ul>
-    </nav>
-</header>
+    <!-- Header -->
+    <header>
+        <a href="index.html">
+            <h1 id="logo">World Language School</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html" class="active">Page 2</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
 
- <!--main-->
- <section id="contact">
-    <h2 class="text-center">Contact</h2>
-	<div class="contact-boxes-container flex horizontal-center gap-20">
-	    <div class="contact-box">
-		<h3 class="text-center">Open times</h3>
+    <!--main-->
+    <section id="class-times">
+        <h2 id="text-center">Class Times</h2>
+        <div class="timetable">
 
-		<table class="text-center">
-    		<tr>
-    			<th></th>
-    			<th>Open</th>
-    			<th>Close</th>	
-    		</tr>
-    		<tr>
-    			<td>Mon - Fri</td>
-    			<td>09:00</td>
-    			<td>21:00</td>
-    		</tr>
-    		<tr>
-    			<td>Weekend</td>
-    			<td>10:00</td>
-    			<td>22:00</td>
-    		</tr>	
-		</table>
-	</div>
-	<div class="text-right contact-box last">
-		<h3>Get in touch</h3>
+            <table class="class-times">
+                <tr>
+                    <th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    </th>
+                </tr>
 
-		<div>
-		<span class="bold">Phone: </span>
-		<span>012 345 678 910</span>
-		</div>
-		<div>
-		<span class="bold">Email: </span>
-		<span>email@coderscoffeehouse.com</span>
-		</div>
-	</div>
-	<div class="text-center contact-box vertical-bottom">
-		<h3>Address</h3>
-		<p>Coders Coffeehouse,<br>42 Coffeebean street,<br>Dublin</p>
-	</div>
-	</div>
-	
-  </section>
+                <tr>
+                    <th>09:00 - 12:00</th>
+                    <td>English</td>
+                    <td>French</td>
+                    <td>Spanish</td>
+                    <td>English</td>
+                    <td>French</td>
+                </tr>
 
+                <tr>
+                    <th>13:00 - 16:00</th>
+                    <td>Spanish</td>
+                    <td>English</td>
+                    <td>French</td>
+                    <td>Spanish</td>
+                    <td>Closed</td>
+                </tr>
+
+            </table>
+
+
+
+        </div>
+
+    </section>
 
 </body>
 
