--- a/classtimes.html
+++ b/classtimes.html
@@ -27,7 +27,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html" class="active">Page 2</a></li>
+                <li><a href="classtimes.html" class="active">Class Times</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
