--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
-            <i class="fa-solid fa-bars"></i>
+            <!-- <i class="fa-solid fa-bars"></i> -->
         </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="page2.html">Page 2</a></li>
+                <li><a href="classtimes.html">Class Times</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
